--- a/views/admin/partial/header.ejs
+++ b/views/admin/partial/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="scotchTodo">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head> 
 	<title><%= config.site.name + '-' + title %> </title> 
 	<meta charset="UTF-8">
@@ -9,12 +9,18 @@
 	<meta name="author" content="<%= config.site.author %>">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/images/favicon.ico">    
-	<link rel='stylesheet' href='/stylesheets/admin/amazeui.css' />  
-	<link rel='stylesheet' href='/stylesheets/admin/admin.min.css' />  
+<!-- 	<link rel='stylesheet' href='/stylesheets/admin/amazeui.css' />   --> 
 	<link rel='stylesheet' href='/stylesheets/admin/editor.css' />  
+	<link rel='stylesheet' href='/stylesheets/admin/bootstrap.css' />  
+	<link rel='stylesheet' href='/stylesheets/admin/font-awesome.css' />  
+	<link rel='stylesheet' href='/stylesheets/admin/admin.min.css' />   
+	<link rel='stylesheet' href='/stylesheets/admin/style.min.css' />   
+
 	<script   src="/javascripts/admin/jquery.min.js"></script> 
 	<script   src="/javascripts/admin/jquery.form.min.js"></script> 
-	<script   src="/javascripts/admin/amazeui.min.js"></script>   
+ <!-- 	<script   src="/javascripts/admin/amazeui.min.js"></script>   --> 
 	<script   src="/javascripts/admin/editor.min.js"></script>    
 	<script   src="/javascripts/admin/marked.min.js"></script>   
+ 	<script   src="/javascripts/admin/bootstrap.min.js"></script> 
+ 	<script   src="/javascripts/admin/jquery.metisMenu.js"></script> 
  	<script   src="/javascripts/admin/admin.min.js"></script> 
