--- a/views/admin/articlelist.ejs
+++ b/views/admin/articlelist.ejs
@@ -1,97 +1,102 @@
 <% include ./partial/header%>
 </head>
-<body>
-<% include ./partial/nav%>
-<div class="am-cf admin-main">
+<body> 
+<div class="wrapper">
 	<!-- sidebar start -->
 	<% include ./partial/catasidebar%>
 	<!-- sidebar end -->
 	<!-- content start -->
-	<div class="admin-content">
-		<div class="admin-content-body">
-			<div class="am-cf am-content-head"> 
-				<strong class="am-text-primary am-text-lg">文章列表</strong> / <small>article list</small>
-			</div> 
-			<div class="am-g am-margin-top">
-				<div class="am-u-sm-12 am-u-md-6">
-					<div class="am-btn-toolbar">
-						<div class="am-btn-group am-btn-group-xs">
-							<a type="button" class="am-btn am-btn-default" href="/admin/addarticle"><span class="am-icon-plus"></span> 新增</a>
-							<button type="button" class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only articledeletebtn" data-am-modal="{target: '#linkmodal', closeViaDimmer: 0, width: 400, height: 225}"><span class="am-icon-trash-o"></span> 删除</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="am-g">
-				<div class="am-u-sm-12">
-					<div class="am-alert " id="notice" style="display:none" role='alert'>
-					</div>
-					<table class="am-table am-table-striped am-table-hover table-main">
-						<thead>
-							<tr>
-								<th class="table-id">ID</th>
-								<th class="table-name">标题</th>
-								<th class="table-flag">类型</th>
-								<th class="table-time">发布时间</th>
-								<th class="table-set">操作</th>
-							</tr>
-						</thead>
-						<tbody>
-							<% var articlelist = d.data %>
-							<% for(var i=0;i<articlelist.length;i++){%>
-								<tr id="<%=articlelist[i].tid%>">
-									<td class="table-id"><%=articlelist[i].tid%></td>
-									<td class="table-name">
-										<a href="/t/<%=articlelist[i].tid%>" target="_blank">
-											<%=articlelist[i].title%>
-										</a>
-									</td>
-									<td class="table-flag">
-										<%=articlelist[i].classify%>
-										<% if(articlelist[i].classify === 0){%>
-										心情
-										<%}else if(articlelist[i].classify === 2){%>
-										文章
-										<%}else{%>
-										快链
-										<%}%>
-									</td>
-									<td class="table-time"><%=articlelist[i].convertdate%></td>
-									<td class="table-set">
-										<div class="am-btn-toolbar">
-											<div class="am-btn-group am-btn-group-xs">
-												<a class="am-btn am-btn-default am-btn-xs am-text-secondary" href="/admin/getarticle/<%-articlelist[i].tid%>"><span class="am-icon-pencil-square-o"></span> 编辑</a>
-												<a class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only articledeletebtn" data-id="<%=articlelist[i].tid%>"><span class="am-icon-trash-o"></span> 删除</a>
-											</div>
-										</div>
-									</td>
-								</tr>
-								<%}%>
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<div class="am-g">
-					<div class="am-u-sm-12">
-						<% include partial/pagination%>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- content end -->
-		<!-- modalbegin -->
-		<div class="am-modal am-modal-confirm" tabindex="-1" id="my-confirm">
-			<div class="am-modal-dialog">
-				<div class="am-modal-hd">文章删除</div>
-				<div class="am-modal-bd">
-					你确定要删除这篇文章吗？
-				</div>
-				<div class="am-modal-footer">
-					<span class="am-modal-btn" data-am-modal-cancel>取消</span>
-					<span class="am-modal-btn" data-am-modal-confirm>确定</span>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
-</html>
+	<div id="page-wrapper" class="gray-bg dashbard-1"> 
+        <% include ./partial/righttop%>
+        
+            <div class="row wrapper border-bottom white-bg page-heading">
+                <div class="col-lg-9">
+                    <h2>主页</h2>
+                    <ol class="breadcrumb">
+                        <li>
+                            <a href="index">主页</a>
+                        </li> 
+                        <li>文章管理</li>
+                        <li>
+                            <strong>文章列表</strong>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            <div class="row wrapper wrapper-content animated fadeInRight border-bottom">  
+                <div class="alert " id="notice" style="display:none" role='alert'></div>
+                <div class="col-lg-12">  
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th class="table-id">ID</th>
+                                    <th class="table-name">标题</th>
+                                    <th class="table-flag">类型</th>
+                                    <th class="table-time">发布时间</th>
+                                    <th class="table-set">操作</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <% var articlelist = d.data %> 
+                                <% for(var i=0;i<articlelist.length;i++){%>
+                                    <tr id="<%=articlelist[i].tid%>">
+                                        <td class="table-id"><%=articlelist[i].tid%></td>
+                                        <td class="table-name">
+                                            <a href="/t/<%=articlelist[i].tid%>" target="_blank">
+                                                <%=articlelist[i].title%>
+                                            </a>
+                                        </td>
+                                        <td class="table-flag">
+                                            <%=articlelist[i].classify%>
+                                            <% if(articlelist[i].classify === 0){%>
+                                            心情
+                                            <%}else if(articlelist[i].classify === 2){%>
+                                            文章
+                                            <%}else{%>
+                                            快链
+                                            <%}%>
+                                        </td>
+                                        <td class="table-time"><%=articlelist[i].convertdate%></td>
+                                        <td class="table-set">
+                                            <div class="am-btn-toolbar">
+                                                <div class="am-btn-group am-btn-group-xs">
+                                                    <a class="btn btn-default btn-white btn-sm " href="/admin/getarticle/<%-articlelist[i].tid%>"><i class="fa fa-pencil"></i> 编辑</a>
+                                                    <a class="btn btn-default btn-white btn-sm articledeletebtn" data-id="<%=articlelist[i].tid%>"><i class="fa fa-trash"></i>删除</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <%}%>
+                                </tbody>
+                         </table>
+                </div>  
+                <div class="col-lg-12">                            
+                    <% include partial/pagination%>
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade makesure-modal" id="articleDelModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+              <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">文章删除</h4>
+                  </div>
+                  <div class="modal-body">
+                    你确定要删除这篇文章吗？
+                    <input type="hidden" id="deltid"  value="">
+                  </div>
+                  <div class="modal-footer">
+                        <div class="col-md-6">  
+                            <button type="button"  id="delarticle-cancel-btn" class="btn btn-default btn-cancel" data-dismiss="modal">取消</button>
+                        </div>
+                        <div class="col-md-6">  
+                            <button type="button" id="delarticle-sure-btn" class="btn btn-default btn-sure">删除</button>
+                        </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+        <% include ./partial/footer%>
