--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -3,28 +3,28 @@
 <body class="loginbg">
 <div class="loginwrap">
 	<form class="am-form am-form-horizontal" role="form" action="/admin/login" method="POST">
-		<div class="am-form-group">
-			<label for="doc-ipt-3" class="am-u-sm-2 am-form-label">帐号</label>
-			<div class="am-u-sm-10">
-				<input type="text" id="uname" name="uname" placeholder="帐号" >
+		<div class="form-group row">
+			<div  class="col-md-2 ipt-label">帐号</div>
+			<div class="col-md-10">
+				<input type="text" class="form-control" id="uname" name="uname" placeholder="帐号" >
 			</div>
 		</div>
-		<div class="am-form-group">
-			<label for="doc-ipt-3" class="am-u-sm-2 am-form-label">密码</label>
-			<div class="am-u-sm-10">
-				<input type="password"  id="pwd" name="pwd" placeholder="密码"  >
+		<div class="form-group row">
+			<div  class="col-md-2 ipt-label">密码</div>
+			<div class="col-md-10">
+				<input type="password"  class="form-control" id="pwd" name="pwd" placeholder="密码"  >
 			</div>
 		</div>  
-		<div class="am-form-group">
-			<div class="col-sm-10">
-				<button type="submit" id="loginBtnSub" class="am-btn am-btn-primary">登录</button>
+		<div class="form-group row">
+			<div class="col-md-12">
+				<button type="submit" id="loginBtnSub" class="btn btn-sm btn-primary">登录</button>
 			</div>
 		</div>
 	</form>
 	<div style="clear:both"></div>
 	<div class="msgbox">
 		<% if(typeof(msg) !== 'undefined' && msg.status !== -1){ %>
-		<div class="am-alert <%=(msg.status === 1)?"am-alert-success":"am-alert-warning" %>" role='alert'>
+		<div class="alert <%=(msg.status === 1)?"alert-success":"alert-warning" %>" role='alert'>
 			<%-msg.content %> 
 		</div>
 		<% } %>
