--- a/views/admin/partial/nav.ejs
+++ b/views/admin/partial/nav.ejs
@@ -1,29 +1,29 @@
-<header class="am-topbar am-topbar-inverse admin-header">
-	<h1 class="am-topbar-brand">
-   		<strong>38SR</strong> <small>管理后台</small> 
-	</h1>
-	 <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#doc-topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span class="am-icon-bars"></span></button>
-
-  <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
-	<ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list">
-		<li><a href="/"><span class="am-icon-home"></span> 网站主页 </a>
-		</li>
-		<li class="am-dropdown" data-am-dropdown="">
-			<a class="am-dropdown-toggle" data-am-dropdown-toggle="" href="javascript:;">
-				<span class="am-icon-users"></span> 管理员 <span class="am-icon-caret-down"></span>
-			</a>
-			<ul class="am-dropdown-content">
-				<li><a href="#"><span class="am-icon-user"></span> 资料</a></li>
-				<li><a href="#"><span class="am-icon-cog"></span> 设置</a></li>
-				<li><a href="/admin/logout"><span class="am-icon-power-off"></span> 退出</a></li>
-			</ul>
-		</li>
-		<li class="am-hide-sm-only">
-			<a href="javascript:;" id="admin-fullscreen">
-				<span class="am-icon-arrows-alt"></span> <span class="admin-fullText">开启全屏</span>
-			</a>
-		</li>
-	</ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#"><strong>38SR</strong> <small>管理后台</small> </a>
     </div>
-</header>
- 
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">  
+      <ul class="nav navbar-nav navbar-right">
+        <li><li><a href="/">网站主页 </a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>管理员 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#"><span ></span> 资料</a></li>
+            <li><a href="#"><span ></span> 设置</a></li>
+            <li><a href="/admin/logout"><span></span> 退出</a></li> 
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
