--- a/views/admin/updatesite.ejs
+++ b/views/admin/updatesite.ejs
@@ -1,74 +1,61 @@
 <% include ./partial/header%>
 </head>
-<body>
-<% include ./partial/nav%>
-<div class="am-cf admin-main">
+<body> 
+<div class="wrapper">
   <!-- sidebar start -->
   <% include ./partial/catasidebar%>
   <!-- sidebar end -->
   <!-- content start -->
-  <div class="admin-content">
-    <div class="admin-content-body">
-      <div class="am-cf am-content-head">
-        <strong class="am-text-primary am-text-lg">Site 更新 </strong><small>/ Site 更新</small>
-      </div>
-      <div class="am-g am-margin-top"> 
-        <div class="am-u-sm-12 am-u-md-6">
-          <div class="am-btn-toolbar">
-            <div class="am-btn-group am-btn-group-xs">
-              <a type="button" class="am-btn am-btn-default" href="/admin/addsiteindex"><span class="am-icon-plus"></span> 新增</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-      <div class="am-g am-margin-top">        
-        <div class="am-u-sm-12">
-          <div class="am-alert " id="notice" style="display:none" role='alert'>
-          </div>
-          <div class="am-form am-form-horizontal">
-            <div class="am-g am-margin-top">
-              <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                网站域名
-              </div>
-              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-                <input type="text" class="am-input-sm" id="sndomain" name="sndomain" placeholder="网站域名">
-              </div>
-            </div>
-            <div class="am-g am-margin-top">
-              <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                网站名字
-              </div>
-              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-                <input type="text" class="am-input-sm" id="snname" name="snname" placeholder="网站名字">
-              </div>
-            </div>
-            <div class="am-g am-margin-top">
-              <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                网站简介
-              </div>
-              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-                <input type="text" class="am-input-sm" id="snbrief" name="snbrief" placeholder="网站简介">
-              </div>
-            </div>
-            <div class="am-g am-margin-top">
-              <div class="am-u-sm-4 am-u-md-2 am-text-right">
-                网站图片
-              </div>
-              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-                <input type="text" class="am-input-sm" id="snpic" name="snpic" placeholder="网站图片">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="am-g">
-        <div class="am-margin">
-          <button type="button" class="am-btn am-btn-primary am-btn-xs"  id="updatesite">提交保存</button>
-        </div>
+  <div id="page-wrapper" class="gray-bg dashbard-1"> 
+        <% include ./partial/righttop%>
         
-      </div>
-    </div>
-    <!-- content end -->
-  </body>
-</html>
+            <div class="row wrapper border-bottom white-bg page-heading">
+                <div class="col-lg-9">
+                    <h2>主页</h2>
+                    <ol class="breadcrumb">
+                        <li>
+                            <a href="index.html">主页</a>
+                        </li> 
+                        <li>Site管理</li>
+                        <li>
+                            <strong>增加Site</strong>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            <div class="row wrapper wrapper-content animated fadeInRight border-bottom"> 
+                     <form  id="pubstr" name="pubstr" method="POST" action="/admin/savearticle">
+                        <div class="col-lg-9"> 
+                                <div class="alert " id="notice" style="display:none" role='alert'>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站域名</label>
+                                    <div class="am-u-sm-10">
+                                        <input type="text" id="sdomain"  class="form-control"  name="sndomain" placeholder="网站域名">  
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站名字</label>
+                                    <div class="am-u-sm-10">
+                                        <input type="text" id="sname"  class="form-control"  name="snname" placeholder="标签以,分开">
+                                    </div>
+                                </div> 
+                                <div class="form-group">
+                                    <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站名字</label>
+                                    <div class="am-u-sm-10">
+                                        <input type="text" id="sname"  class="form-control"  name="snname" placeholder="标签以,分开">
+                                    </div>
+                                </div>  
+                                <div class="form-group">
+                                    <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站图片</label>
+                                    <div class="am-u-sm-10">
+                                        <input type="text" id="spic"  class="form-control"  name="snpic" placeholder="标签以,分开">
+                                    </div>
+                                </div>  
+                                <button type="submit" class="btn btn-sm btn-primary" id="updatesite">提交保存</button> 
+                        </div> 
+                    </form> 
+            </div>
+
+        <% include ./partial/footer%>
