--- a/views/admin/addarticle.ejs
+++ b/views/admin/addarticle.ejs
@@ -18,7 +18,7 @@
                         </li> 
                         <li>文章管理</li>
                         <li>
-                            <strong>增加文章</strong>
+                            增加文章
                         </li>
                     </ol>
                 </div>
