--- a/views/admin/partial/header.ejs
+++ b/views/admin/partial/header.ejs
@@ -15,12 +15,13 @@
 	<link rel='stylesheet' href='/stylesheets/admin/font-awesome.css' />  
 	<link rel='stylesheet' href='/stylesheets/admin/admin.min.css' />   
 	<link rel='stylesheet' href='/stylesheets/admin/style.min.css' />   
+	<link rel='stylesheet' href='/stylesheets/admin/msgbox.min.css' />   
 
 	<script   src="/javascripts/admin/jquery.min.js"></script> 
-	<script   src="/javascripts/admin/jquery.form.min.js"></script> 
- <!-- 	<script   src="/javascripts/admin/amazeui.min.js"></script>   --> 
+	<script   src="/javascripts/admin/jquery.form.min.js"></script>  
 	<script   src="/javascripts/admin/editor.min.js"></script>    
 	<script   src="/javascripts/admin/marked.min.js"></script>   
  	<script   src="/javascripts/admin/bootstrap.min.js"></script> 
  	<script   src="/javascripts/admin/jquery.metisMenu.js"></script> 
+	<script   src="/javascripts/admin/msgbox.min.js"></script> 
  	<script   src="/javascripts/admin/admin.min.js"></script> 
