--- a/views/admin/updatearticle.ejs
+++ b/views/admin/updatearticle.ejs
@@ -47,6 +47,7 @@
                                         <textarea type="text" class="writebox textarea" class="form-control"  name="mcontent" id="postcontent" placeholder="写点什么呢?"><%-article.mcontent %></textarea>
                                     </div>
                                 </div> 
+                                <input type="hidden" id="tid" name="tid" value="<%=article.tid%>">
                                 <button type="submit" class="btn btn-sm btn-primary" id="subarticle">发布</button> 
                         </div> 
                     </form> 
