--- a/views/articledetail.ejs
+++ b/views/articledetail.ejs
@@ -13,7 +13,7 @@ var replies = d.replies;
 	<div class="leftwrap">
 		<div class="articleitem_detail detailinfo">
 			<div class="detail_msg_head">
-				<div style="padding: 10px 0px;color:#333">
+				<div class="detail_msg_title">
 				<% if(articlecontent.title &&articlecontent.title.length > 0 ){%>
 				<%= articlecontent.title %>
 				<%}else{%>
