--- a/views/partial/sitesidebar.ejs
+++ b/views/partial/sitesidebar.ejs
@@ -1,4 +1,4 @@
-<div class="addressswrap">
+<div class="sitewrap">
 	<div class="sitename"><i class="fa fa-rss"></i><%-d.sitename%></div>
 	<div class="sitecount">共 <%-d.count%> 条记录 </div>
 </div>
