--- a/views/pubarticle.ejs
+++ b/views/pubarticle.ejs
@@ -29,7 +29,7 @@
           <form class="navbar-form navbar-right" id="pubstr" name="pubstr" method="GET" action="/publ">
             <div id="link_input" >
               <input  class="form-control " id="url" name="url" placeholder="请输入分享的链接"> 
-              <button type="submit" class="btn btn-success" id="searchtitle"><i class="loading fa fa-circle-o-notch fa-spin"></i>查询</button>
+              <button type="submit" class="btn btn-success" id="searchtitle"><div class="iloading" style="width:15px;height:15px;top:5px;margin-right:2px;display:none"></div>查询</button>
             </div> 
             <textarea type="text" class="writebox textarea" id="pub_link_brief" name="publinkbrief" placeholder="点击查询可自动生成网页title"></textarea> 
             <div class="sublink_wrap">
