--- a/views/publink.ejs
+++ b/views/publink.ejs
@@ -8,7 +8,7 @@
           <div class="titlewrap"> 
             <div id="title_input" >
               <input  class="form-control " id="link" name="link" placeholder=""> 
-              <button type="submit" class="btn btn-success" id="searchtitle"><i class="loading fa fa-circle-o-notch fa-spin"></i>查询</button>
+              <button type="submit" class="btn btn-success" id="searchtitle"><div class="iloading"></div>查询</button>
             </div>
           </div>
         <form class="navbar-form navbar-right" id="pub_link_brief" name="publinkbrief" method="GET" action="/pub">
