--- a/views/admin/updatesite.ejs
+++ b/views/admin/updatesite.ejs
@@ -18,13 +18,12 @@
                         </li> 
                         <li>Site管理</li>
                         <li>
-                            <strong>增加Site</strong>
+                            增加Site
                         </li>
                     </ol>
                 </div>
             </div>
-            <div class="row wrapper wrapper-content animated fadeInRight border-bottom"> 
-                     <form  id="pubstr" name="pubstr" method="POST" action="/admin/savearticle">
+            <div class="row wrapper wrapper-content animated fadeInRight border-bottom">  
                         <div class="col-lg-9"> 
                                 <div class="alert " id="notice" style="display:none" role='alert'>
                                 </div>
@@ -32,30 +31,29 @@
                                 <div class="form-group">
                                     <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站域名</label>
                                     <div class="am-u-sm-10">
-                                        <input type="text" id="sdomain"  class="form-control"  name="sndomain" placeholder="网站域名">  
+                                        <input type="text" id="sndomain"  class="form-control"  name="sndomain" placeholder="网站域名">  
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站名字</label>
                                     <div class="am-u-sm-10">
-                                        <input type="text" id="sname"  class="form-control"  name="snname" placeholder="标签以,分开">
+                                        <input type="text" id="snname"  class="form-control"  name="snname" placeholder="网站名字">
                                     </div>
                                 </div> 
                                 <div class="form-group">
-                                    <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站名字</label>
+                                    <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站简介</label>
                                     <div class="am-u-sm-10">
-                                        <input type="text" id="sname"  class="form-control"  name="snname" placeholder="标签以,分开">
+                                        <input type="text" id="snname"  class="form-control"  name="snname" placeholder="网站简介">
                                     </div>
                                 </div>  
                                 <div class="form-group">
                                     <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站图片</label>
                                     <div class="am-u-sm-10">
-                                        <input type="text" id="spic"  class="form-control"  name="snpic" placeholder="标签以,分开">
+                                        <input type="text" id="snpic"  class="form-control"  name="snpic" placeholder="网站图片">
                                     </div>
                                 </div>  
                                 <button type="submit" class="btn btn-sm btn-primary" id="updatesite">提交保存</button> 
-                        </div> 
-                    </form> 
+                        </div>  
             </div>
 
         <% include ./partial/footer%>
