--- a/views/admin/userlist.ejs
+++ b/views/admin/userlist.ejs
@@ -18,7 +18,7 @@
                         </li> 
                         <li>用户管理</li>
                         <li>
-                            <strong>用户列表</strong>
+                            用户列表
                         </li>
                     </ol>
                 </div>
