--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -265,6 +265,83 @@
 	color: #555; 
 }
 
+
+.linkitem .photowrap .userlink{
+	width: 30px;
+	height: 30px;
+	display: block;
+}
+.linkitem .photowrap{
+	    float: left;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    overflow: hidden;
+}
+.linkitem .linkicon{
+    float: right;
+    line-height: 22px;
+    margin-top: 3px;
+    margin-right: 5px;
+    color: #777;
+    padding: 1px 7px;
+    background-color: #f5f5f5;
+}
+.linkitem .linktitle {
+    margin-left: 5px;
+    line-height: 30px;
+    display: inline-block;
+}
+.linkitem .linkdate{
+	float: right;
+	    line-height: 30px;
+}
+.linkitem {
+	position: relative;
+	height:50px;
+    padding: 10px 20px;
+    background-color: #FFF;
+    border-bottom: 1px solid #E9DDC6; 
+}
+.linkitem:hover, .linkitem:hover .right-box{	
+    background-color: #f5f5f5; 
+}
+.left-box{
+	min-width: 10000px;
+}
+.right-box{
+    position: absolute;
+    height: 48px;
+    padding: 10px;
+    right: 0;
+    top: 0;
+    background-color: #fff;
+}
+
+#pagemore{
+	height: 50px;
+	width: 100%;
+	display: block;
+	text-align: center;
+}
+#pagemore span{ 
+    height: 50px; 
+    text-align: center;
+    line-height: 50px;
+}
+#pagemore:hover{
+	cursor: pointer;
+	background-color: #f5f5f5;
+}
+.photowrap img {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+    border: 2px solid #fff;
+    -webkit-transition: all .35s ease-in-out;
+    -moz-transition: all .35s ease-in-out;
+    transition: all .35s ease-in-out;
+}
 .userfresh {
 	margin-top: 20px;	
 	padding: 0px 10px 10px;
