--- a/views/admin/updatesite.ejs
+++ b/views/admin/updatesite.ejs
@@ -43,7 +43,7 @@
                                 <div class="form-group">
                                     <label for="doc-ipt-3" class="am-u-sm-2 am-form-label">网站简介</label>
                                     <div class="am-u-sm-10">
-                                        <input type="text" id="snname"  class="form-control"  name="snname" placeholder="网站简介">
+                                        <input type="text" id="snbrief"  class="form-control"  name="snbrief" placeholder="网站简介">
                                     </div>
                                 </div>  
                                 <div class="form-group">
