--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -92,5 +92,17 @@
 		</div>
 	</div>
 </footer>
+
+	<script src="/javascripts/marked.min.js"></script>  	
+	<script type="text/javascript">
+		<% if(locals.pageflag == 3){%>
+		  var route = "pub";
+		<%}else{%>
+		  var route = "_pub";
+			<%}%>
+	</script>
+
+	<script  data-main="/javascripts/main.min.js" src="/javascripts/require.min.js"></script> 
+ 
 </body>
 </html>
